# project_team

./: .gitignore  LICENSE  MNIST_classification.py  MNIST_classification_HPTuning.py  MNIST_classification_KFoldValidation.py  MNIST_classification_TrainTestSplit.py  MNIST_regression_TrainTestSplit.py  README.md  SegDec_segmentation_TrainTestSplit.py  coverage_test.py  default_arguements.py  import_debug.py  nlpgb.py  not_a_setup.py  pyproject.toml  requirements.txt  savename_bug.py  setup.cfg  setup.py
.github/: codecov.yml
.github/workflows/: check_pull_request_title.yml  code_quality.yml  publish.yml  tests.yml
project_team/: __init__.py  project_config.py
project_team/dt_project/: DT_config.py  __init__.py  datasets.py
project_team/dt_project/DataProcessors/: SITK_Processor.py  __init__.py
project_team/dt_project/dt_processing/: __init__.py  functional.py  img_intensity.py  img_shape.py
project_team/io_project/: IO_config.py
project_team/io_project/Managers/: IO_Manager.py  MedSeg_PT_Manager.py  _HyperParameterTuning.py  _Kfold.py  _Statistical_Project.py  _TrainDeploy.py
project_team/ml_project/: segmentation_losses.py
project_team/ml_project/Practitioners/: GAN_Practitioners.py  LMEM_Practitioner.py  LogRegORAnalysis_Practitioner.py  Ordinal_Correlation_Practitioner.py  PTRegression_Practitioner.py  (+5 more)
src/: __init__.py  project_config.py
src/dt_project/: DT_config.py  Scan_utils.py  __init__.py  datasets.py
src/io_project/: IO_config.py  __init__.py
src/ml_project/: __init__.py
src/project_team/: __init__.py  project_config.py
(+75 files in other folders)
