[build-system]
requires = [
  "setuptools>=42",
]
build-backend = "setuptools.build_meta"

[tool.black]
preview = true
skip-string-normalization = 1
target-version = ['py311']

#[build-system]
#requires = ["setuptools>=61.0"]
#build-backend = "setuptools.build_meta"
#
#[project]
#name="project_team"
#version="0.1.0"
#authors=[
#    {name="Grey Kuling"},
#]
#license={text="BSD 3-Clause"}
#description="Stuff"
#readme="README.md"
#requires-python=">=3.7"
#dynamic = ["dependencies"]
#keywords=[
#    "medical-imaging",
#]
#
#[tool.setuptools]
#packages = ["project_team"]
#
##[tool.setuptools.dynamic]
##dependencies = {file = ["requirements.txt"]}
#
#
#[tool.yapf]
#based_on_style = "pep8"
#split_before_named_assigns = false
#blank_line_before_nested_class_or_def = false
#
#
#[tool.isort]
#multi_line_output = 3
#include_trailing_comma = true
#skip = [".gitingore", "__init__.py"]
